--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                     <li><a>Home</a></li>
                     <li><a>Shop</a></li>
                     <li><a>News</a></li>
+                    <li><a>Good</a></li>
                     <li><a>Contact</a></li>
                   </ul>
                 </div>
